--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://amaze-digital-services.vercel.app/ADS.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -341,7 +342,7 @@
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_subject" value="New submission!">
                             <input type="hidden" name="_template" value="table">
-                            <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
+                            <input type="hidden" name="_next" value="https://amaze-digital-services.vercel.app/thanks.html">
 
                             <div class="form-group">
                                 <label for="name" class="form-label">Full Name</label>
