--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,7 @@
 
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="https://amaze-digital-services.vercel.app/ADS.jpg" type="image/x-icon">
 
     <style>
         /* Reset and Base Styles */
@@ -551,11 +552,11 @@
 
                 <!-- Action Buttons -->
                 <div class="action-buttons fade-in-delay">
-                    <a href="index.html" class="btn-primary">
+                    <a href="https://amaze-digital-services.vercel.app/" class="btn-primary">
                         <i class="fas fa-home"></i>
                         Back to Homepage
                     </a>
-                    <a href="index.html#portfolio" class="btn-secondary">
+                    <a href="https://amaze-digital-services.vercel.app" class="btn-secondary">
                         <i class="fas fa-eye"></i>
                         View My Work
                     </a>
