--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
                                     <option value="plumbing">Plumbing</option>
                                     <option value="beauty">Beauty Salon</option>
                                     <option value="moving">Moving Company</option>
-                                    <option value="restaurant">Gym</option>
-                                    <option value="restaurant">HVAC</option>
+                                    <option value="Gym">Gym</option>
+                                    <option value="HVAC">HVAC</option>
                                     <option value="other">Other</option>
                                 </select>
                             </div>
