--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
             <div class="grid grid-cols-1 grid-cols-md-3">
                 <div class="portfolio-card fade-in">
-                    <img src="QuickFix.png" alt="Joe's Plumbing Website" class="portfolio-image">
+                    <img src="quickplum.png" alt="Joe's Plumbing Website" class="portfolio-image">
                     <div class="portfolio-content">
                         <h3>QuickFix Plumbing</h3>
                         <p>
