--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <div class="slide-in-left">
                     <div class="contact-form">
                         <h3>Get Your Free Quote</h3>
-                        <form action="https://formsubmit.co/abdulrahmanadeonigemo@gmail.com" method="POST">
+                        <form action="https://formsubmit.co/amazedigitalservices@gmail.com" method="POST">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_subject" value="New submission!">
                             <input type="hidden" name="_template" value="table">
@@ -399,12 +399,12 @@
                                     <div class="contact-method-text">
                                         <h4>Email</h4>
                                         <p><a
-                                                href="mailto:abdulrahmanadeonigemo@gmail.com">abdulrahmanadeonigemo@gmail.com</a>
+                                                href="mailto:amazedigitalservices@gmail.com">amazedigitalservices@gmail.com</a>
                                         </p>
                                     </div>
                                 </div>
 
-                                <div class="contact-method">
+                                <!--<div class="contact-method">
                                     <div class="contact-method-icon">
                                         <i class="fas fa-phone"></i>
                                     </div>
@@ -412,7 +412,7 @@
                                         <h4>Phone</h4>
                                         <p><a href="tel:+2347078793742">+234 707 879 3742</a></p>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <div class="contact-method">
                                     <div class="contact-method-icon">
@@ -436,8 +436,8 @@
                                     class="social-link">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="https://wa.me/2347078793742" class="social-link">
-                                    <i class="fab fa-whatsapp"></i>
+                                <!--<a href="https://wa.me/2347078793742" class="social-link">
+                                    <i class="fab fa-whatsapp"></i>-->
                                 </a>
                                 <a href="https://x.com/AbdulRahma86422" class="social-link">
                                     <i class="fab fa-twitter"></i>
@@ -494,8 +494,8 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <ul class="footer-links">
-                        <li>abdulrahmanadeonigemo@gmail.com</li>
-                        <li>+234 707 879 3742</li>
+                        <li>amazedigitalservices@gmail.com</li>
+                        <!--<li>+234 707 879 3742</li>-->
                         <li>Available Mon-Sun 9AM-6PM</li>
                     </ul>
                 </div>
